# flight-planner

./: README.md  airway_graph.py  generate_airways.py  main.py  map_types.py  path_search.py  pyproject.toml
data/: AWY_SEG.csv  DP_APT.csv  DP_RTE.csv  NAV_BASE.csv  STAR_APT.csv  STAR_RTE.csv  airway_graph.pkl
