[tool.poetry]
name = "flight-planner"
version = "0.1.0"
description = ""
authors = ["Justin Kleiber <jkleiber8@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flight_planner"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
